--- a/src/template.html
+++ b/src/template.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
 </head>
+
 <body>
     <div class="wrapper">
         <header>
             <img src="Images/Todo Logo.jpg" alt="logo">
             <h1>TODO LIST</h1>
         </header>
-        <main>
-            <!-- Task details will be loaded here -->
-        </main>
-        <aside>
-            <!-- Task lists will be loaded here along with new task addition button -->
-        </aside>
+        <div class="content">
+            <main>
+                <!-- Task details will be loaded here -->
+            </main>
+            <aside>
+                <!-- Task lists will be loaded here along with new task addition button -->
+            </aside>
+        </div>
     </div>
 
     <template id="projectTemplate">
@@ -43,12 +47,12 @@
 
     <template id="taskformtemplate">
         <dialog>
-            <form id= "form" action="" method="get">
+            <form id="form" action="" method="get">
                 <fieldset>
                     <legend>Enter Task Details:</legend>
 
                     <label for="title">Enter Title:</label>
-                    <input type="text" name="title" id="title" required/>
+                    <input type="text" name="title" id="title" required />
 
                     <label for="notes">Enter Notes:</label>
                     <textarea name="notes" id="notes" required></textarea>
@@ -57,13 +61,15 @@
                     <input type="date" name="dueDate" id="dueDate">
 
                     <label for="priority">Priority</label>
-                    <input type="range" name= "priority" min="0" max="5">
+                    <input type="range" name="priority" min="0" max="5">
                 </fieldset>
-                <button id="submit-task">Add</button> <button value="Cancel" formmethod="dialog" formnovalidate>Cancel</button>
+                <button id="submit-task">Add</button> <button value="Cancel" formmethod="dialog"
+                    formnovalidate>Cancel</button>
 
             </form>
         </dialog>
     </template>
 
 </body>
+
 </html>
